filled out the rest of the processes besides reformat
