# app/models/process_color.py
@@ -9,7 +9,7 @@ from app.models.base_model_ import Model
 from app.models.parameter import Parameter  # noqa: F401,E501
 from app.models.process import Process  # noqa: F401,E501
 from app import util
-
+from app.operations import *
 
 class ProcessColor(Process):
     def __init__(self, array_of_parameter: List[Parameter]=None):  # noqa: E501
@@ -21,7 +21,13 @@ class ProcessColor(Process):
         """
 
         self._array_of_parameter = array_of_parameter
-        super(ProcessColor, self).__init__()
+        super(ProcessColor, self).__init__(requires_params=True,
+                                            minimum_params=1,
+                                            maximum_params=1,
+                                            valid_params=[["factor"]],
+                                            param_type=float,
+                                            operation=color)
+
 
     @classmethod
     def from_dict(cls, dikt) -> 'ProcessColor':
@@ -33,3 +39,7 @@ class ProcessColor(Process):
         :rtype: ProcessColor
         """
         return util.deserialize_model(dikt, cls)
+
+    def _make_operation(self):
+        """fill out the operation with it's parameters"""
+        return self._operation(float(self._array_of_parameter[0]["value"]))
