# app/models/process_contrast.py
@@ -9,7 +9,7 @@ from app.models.base_model_ import Model
 from app.models.parameter import Parameter  # noqa: F401,E501
 from app.models.process import Process  # noqa: F401,E501
 from app import util
-
+from app.operations import *
 
 class ProcessContrast(Process):
     def __init__(self, array_of_parameter: List[Parameter]=None):  # noqa: E501
@@ -21,7 +21,13 @@ class ProcessContrast(Process):
         """
 
         self._array_of_parameter = array_of_parameter
-        super(ProcessContrast, self).__init__()
+        super(ProcessContrast, self).__init__(requires_params=True,
+                                                minimum_params=1,
+                                                maximum_params=1,
+                                                valid_params=[["factor"]],
+                                                param_type=float,
+                                                operation=contrast)
+
 
     @classmethod
     def from_dict(cls, dikt) -> 'ProcessContrast':
@@ -33,3 +39,7 @@ class ProcessContrast(Process):
         :rtype: ProcessContrast
         """
         return util.deserialize_model(dikt, cls)
+
+    def _make_operation(self):
+        """fill out the operation with it's parameters"""
+        return self._operation(float(self._array_of_parameter[0]["value"]))
