# app/models/process_min_filter.py
@@ -9,7 +9,7 @@ from app.models.base_model_ import Model
 from app.models.parameter import Parameter  # noqa: F401,E501
 from app.models.process import Process  # noqa: F401,E501
 from app import util
-
+from app.operations import *
 
 class ProcessMinFilter(Process):
     def __init__(self, array_of_parameter: List[Parameter]=None):  # noqa: E501
@@ -21,7 +21,13 @@ class ProcessMinFilter(Process):
         """
 
         self._array_of_parameter = array_of_parameter
-        super(ProcessMinFilter, self).__init__()
+        super(ProcessMinFilter, self).__init__(requires_params=True,
+                                                minimum_params=1,
+                                                maximum_params=1,
+                                                valid_params=[["size"]],
+                                                param_type=int,
+                                                operation=minFilter)
+
 
     @classmethod
     def from_dict(cls, dikt) -> 'ProcessMinFilter':
@@ -29,7 +35,11 @@ class ProcessMinFilter(Process):
 
         :param dikt: A dict.
         :type: dict
-        :return: The Process --&gt; minFilter of this ProcessMinFilter.  # noqa: E501
+        :return: The Process --&gt; minfilter of this ProcessMinFilter.  # noqa: E501
         :rtype: ProcessMinFilter
         """
         return util.deserialize_model(dikt, cls)
+
+    def _make_operation(self):
+        """fill out the operation with it's parameters"""
+        return self._operation(int(self._array_of_parameter[0]["value"]))
