# app/models/process_reformat.py
@@ -9,7 +9,7 @@ from app.models.base_model_ import Model
 from app.models.parameter import Parameter  # noqa: F401,E501
 from app.models.process import Process  # noqa: F401,E501
 from app import util
-
+from app.operations import *
 
 class ProcessReformat(Process):
     def __init__(self, array_of_parameter: List[Parameter]=None):  # noqa: E501
@@ -22,6 +22,13 @@ class ProcessReformat(Process):
 
         self._array_of_parameter = array_of_parameter
         super(ProcessReformat, self).__init__()
+        super(ProcessReformat, self).__init__(requires_params=True,
+                                                minimum_params=1,
+                                                maximum_params=1,
+                                                valid_params=[["format"]],
+                                                param_type=str,
+                                                operation=mirror)
+
 
     @classmethod
     def from_dict(cls, dikt) -> 'ProcessReformat':
@@ -33,3 +40,7 @@ class ProcessReformat(Process):
         :rtype: ProcessReformat
         """
         return util.deserialize_model(dikt, cls)
+
+    def _make_operation(self):
+        """fill out the operation with it's parameters"""
+        return self._operation(str(self._array_of_parameter[0]["value"]))
