# app/models/process_sharpen.py
@@ -9,7 +9,7 @@ from app.models.base_model_ import Model
 from app.models.parameter import Parameter  # noqa: F401,E501
 from app.models.process import Process  # noqa: F401,E501
 from app import util
-
+from app.operations import *
 
 class ProcessSharpen(Process):
     def __init__(self, array_of_parameter: List[Parameter]=None):  # noqa: E501
@@ -19,9 +19,14 @@ class ProcessSharpen(Process):
         :param array_of_parameter: The array_of_parameter of this ProcessSharpen.  # noqa: E501
         :type array_of_parameter: List[Parameter]
         """
-        
+
         self._array_of_parameter = array_of_parameter
-        super(ProcessSharpen, self).__init__()
+        super(ProcessSharpen, self).__init__(requires_params=True,
+                                                minimum_params=1,
+                                                maximum_params=1,
+                                                valid_params=[["factor"]],
+                                                param_type=float,
+                                                operation=sharpen)
 
     @classmethod
     def from_dict(cls, dikt) -> 'ProcessSharpen':
@@ -33,3 +38,7 @@ class ProcessSharpen(Process):
         :rtype: ProcessSharpen
         """
         return util.deserialize_model(dikt, cls)
+
+    def _make_operation(self):
+        """fill out the operation with it's parameters"""
+        return self._operation(float(self._array_of_parameter[0]["value"]))
